--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,7 +26,15 @@
         <nav class="navbar navbar-dark bg-warning text-dark">
             <div class="container-fluid   ">
                 <div class="navbar-header ">
+                    <!-- Image and text -->
+
+                    <a class="navbar-brand" href="#">
+                        <img src="../Images/sunset-1018464__480.webp" width="50" height="30"
+                            class="d-inline-block align-top logimg" alt="">
+                    </a>
                     <a class="navbar-brand  " href="#">My NSW</a>
+
+
                 </div>
                 <ul class="nav navbar-nav ">
                     <li class="active"><a href="#">Home</a></li>
@@ -40,19 +48,19 @@
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Search">
                     </div>
-                    <button type="submit" class="btn btn-default">Submit1</button>
+                    <button type="submit" class="btn btn-default">Submit</button>
                 </form>
             </div>
         </nav>
 
     </header>
-<div id="brg" >
- <img src="../Images/sunset-1018464__480.webp" alt="" height="300" width="100%">  
-  
-</div>
+    <div id="brg">
+        <img src="../Images/sunset-1018464__480.webp" alt="" height="300" width="100%">
+
+    </div>
 
 
-
+<p></p>
 
 </body>
 
