Added extra pages

--- a/HTML/Councils.html
+++ b/HTML/Councils.html
@@ -39,12 +39,12 @@
 
                     </div>
                     <ul class="nav navbar-nav ">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">Culture</a></li>
-                        <li><a href="#">Geography</a></li>
-                        <li><a href="#">Regions</a></li>
-                        <li><a href="#">Councils</a></li>
-                        <li><a href="#">Economy</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="Culture.html">Culture</a></li>
+                        <li><a href="Geography.html">Geography</a></li>
+                        <li><a href="Regions.html">Regions</a></li>
+                        <li><a href="Culture.html">Councils</a></li>
+                        <li><a href="Economy.html">Economy</a></li>
                     </ul>
                     <form class="navbar-form navbar-right" action="/action_page.php">
                         <div class="form-group">
@@ -66,7 +66,7 @@
         <div class="" style="margin-top: 20px;">
             <div class="leftaside"  style=" width:15%; height: 600px; background-image: url(../Images/awards.jpg); float: left;  ">
             </div>
-            <h2 class="text-center bg-info">NSW-The Economy State</h2>
+            <h2 class="text-center">Councils</h2>
 
         </div>
 
