--- a/HTML/Economy.html
+++ b/HTML/Economy.html
@@ -30,11 +30,11 @@
                     <div class="navbar-header ">
                         <!-- Image and text -->
 
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="index.html">
                             <img src="../Images/sunset-1018464__480.webp" width="50" height="30"
                                 class="d-inline-block align-top logimg" alt="">
                         </a>
-                        <a class="navbar-brand  " href="#">My NSW</a>
+                        <a class="navbar-brand  " href="index.html">My NSW</a>
 
 
                     </div>
