almost completed index page , added social medial icons in footer

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,6 +17,7 @@
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="../JS/Scripts"></script>
+    
     <title>Welcom to NSW</title>
 
 </head>
@@ -24,8 +25,8 @@
 <body>
     <div class="container">
         <header>
-            <nav class="navbar navbar-dark bg-success text-dark sticky-top">
-                <div class="container-fluid   ">
+            <nav class="navbar navbar-dark bg-success text-dark ">
+                <div class="container-fluid ">
                     <div class="navbar-header ">
                         <!-- Image and text -->
 
@@ -56,8 +57,8 @@
 
         </header>
 
-        <div >
-            <img src="../Images/pond.jpg" alt="" height="300" width="100%" style="border-radius: 10px;">
+        <div class="sticky2" >
+            <img src="../Images/sydney.jpg" alt="" height="300" width="100%" style="border-radius: 10px; " >
 
         </div>
 
@@ -132,7 +133,7 @@
                             largest city in Australia — is famous for many things. The glittering harbour, complemented
                             by landmarks like the Sydney Opera House and the Sydney Harbour Bridge. The dozens of
                             sun-bathed beaches peppering the spectacular coastline.</p>
-                        <a href="#" class="btn btn-primary" style="border-radius: 20px">Go somewhere</a>
+                        <a href="https://www.sydney.com/" class="btn btn-primary " style="border-radius: 20px; width:50%;">Go Sydney</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +146,7 @@
                             making it Australia's most populous state. Just under two-thirds of the state's population,
                             5.1 million, live in the Greater Sydney area. Inhabitants of New South Wales are referred to
                             as New South Welshmen.</p>
-                        <a href="#" class="btn btn-primary " style="margin-top: 20px; border-radius: 20px">Go somewhere</a>
+                        <a href="https://www.abs.gov.au/population" class="btn btn-primary  " style="margin-top: 20px; border-radius: 20px; width:50%;">Go Population</a>
                     </div>
                 </div>
             </div>
@@ -157,7 +158,7 @@
                         <p class="card-text">By establishing your business in regional NSW you can leverage an
                             economically and environmentally diverse area than can easily connect to elsewhere in
                             Australia and the Asia Pacific.</p>
-                        <a href="#" class="btn btn-primary" style="margin-top: 60px; border-radius: 20px;">Go somewhere</a>
+                        <a href="https://www.nsw.gov.au/about-nsw" class="btn btn-primary " style="margin-top: 60px; border-radius: 20px; width:50%">Go NSW</a>
                     </div>
                 </div>
             </div>
@@ -183,29 +184,29 @@
         <div class="col-md-4">
             <h3>NSW Government</h3>
             <ul>
-                <li>a</li>
-                <li>b</li>
-                <li>c</li>
-                <li>d</li>
+                <li>The Premier</li>
+                <li>Media Releases</li>
+                <li>NSW Ministers</li>
+                <li>Have Your Say</li>
             </ul>
         </div>
 
         <div class="col-md-4">
             <h3>NSW Departments</h3>
             <ul>
-                <li>a</li>
-                <li>b</li>
-                <li>c</li>
-                <li>d</li>
+                <li>Education</li>
+                <li>Health</li>
+                <li>Planning and Development</li>
+                <li>Regional NSW</li>
             </ul>
         </div>
         <div class="col-md-4">
             <h3>Popular</h3>
             <ul>
-                <li>a</li>
-                <li>b</li>
-                <li>c</li>
-                <li>d</li>
+                <li>News</li>
+                <li>Life Events</li>
+                <li>NSW School and Public Holidays</li>
+                <li>Find a Job in NSW Government</li>
             </ul>
         </div>
 
@@ -216,7 +217,15 @@
 </div>
 
 <footer class="footerDiv">
-
+    <div style="float: left; padding-top: 30px; padding-left: 30px; color: white;">
+        <p>We pay respect to the Traditional Custodians and First Peoples of NSW, and acknowledge their continued connection to their country and culture.</p>
+    <p>Copyright © 2020</p>
+    </div>
+    <div style="float:right;"> 
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-instagram"></a>
+</div>
 
 </footer>
 </html>
