--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,6 +12,10 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <!-- 
+    <link rel="stylesheet" href="jquery.rtResponsiveTables.min.css">
+    <script src="jquery.rtResponsiveTables.min.js" type="text/javascript"></script>
+    -->
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- Load an icon library -->
@@ -22,11 +26,11 @@
 
 </head>
 
-<body>
-    <div class="container">
+<body >
+    <div class="container bg-info " style="margin-top: 10px;">
         <header>
-            <nav class="navbar navbar-dark bg-success text-dark ">
-                <div class="container-fluid ">
+            <nav class="navbar navbar-dark bg-success text-dark" style="border:orange 1px solid ;">
+                <div class="container-fluid   ">
                     <div class="navbar-header ">
                         <!-- Image and text -->
 
@@ -88,11 +92,14 @@
                     square kilometre.</h4><br />
                 <h4>Top five languages spoken at home in NSW</h4><br />
                 <table>
+                    <thead>
                     <tr>
                         <th>Language</th>
                         <th>Number Of People</th>
                         <th>Percentage</th>
                     </tr>
+                </thead>
+                <tbody>
                     <tr>
                         <td>English</td>
                         <td>5,126,633</td>
@@ -118,6 +125,7 @@
                         <td>102,896</td>
                         <td>1.4%</td>
                     </tr>
+                </tbody>
                 </table>
             </div>
         </div>
@@ -228,4 +236,5 @@
 </div>
 
 </footer>
+ 
 </html>
