Applied Parallax on index page

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -55,14 +55,14 @@
 
 
         </header>
-
-        <div class="sticky2 " style="margin-top: 5px;">
+<!--        <div class="sticky2 " style="margin-top: 5px;">
             <img src="../Images/sydney.jpg" alt="" height="300" width="100%" style="border-radius: 10px; ">
 
         </div>
+-->
+        <div class="parallax" style="margin-top: 10px; border-radius: 10px;"></div>
 
-
-        <div class="ml-4 " style="margin-top: 20px;">
+        <div class="ml-4 " style="margin-top: 20px; height:1000px; font-size:22px">
             <div class="leftaside mr-4"
                 style=" width:15%; height: 600px; background-image: url(../Images/awards.jpg); float: left;  ">
             </div>
@@ -124,7 +124,7 @@
                 </table>
             </div>
         </div>
-
+        <div class="parallax" style="margin-top: 10px; border-radius: 10px;"></div>
 
         <div class="row cardsDiv">
             <div class="col-md-4">
