--- a/HTML/test.html
+++ b/HTML/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--  CSS Link -->
     <link type="text/css" rel="stylesheet" href="../CSS/Style.css">
     <!-- Latest compiled and minified CSS -->
@@ -41,6 +41,31 @@
 
     
     </header>
+<div>
+    <p>Scroll Up and Down this page to see the parallax scrolling effect.</p>
+
+    <div class="parallax"></div>
+    
+    <div style="height:1000px;background-color:red;font-size:36px">
+    Scroll Up and Down this page to see the parallax scrolling effect.
+    This div is just here to enable scrolling.
+    Tip: Try to remove the background-attachment property to remove the scrolling effect.
+    </div>
+    <div class="parallax"></div>
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
     <script>
       function myFunction() {
