--- a/HTML/test.html
+++ b/HTML/test.html
@@ -1,3 +1,6 @@
+
+<!-- This html is to test the code only so if in case my code does not go as plan my actual html does not become messy -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
