--- a/HTML/index.html
+++ b/HTML/index.html
@@ -55,14 +55,10 @@
 
 
         </header>
-<!--        <div class="sticky2 " style="margin-top: 5px;">
-            <img src="../Images/sydney.jpg" alt="" height="300" width="100%" style="border-radius: 10px; ">
-
-        </div>
--->
+ 
         <div class="parallax" style="margin-top: 10px; border-radius: 10px;"></div>
 
-        <div class="ml-4 " style="margin-top: 20px; height:1000px; font-size:22px">
+        <div class="ml-4 " style="margin-top: 20px; height:1000px; font-size:18px">
             <div class="leftaside mr-4"
                 style=" width:15%; height: 600px; background-image: url(../Images/awards.jpg); float: left;  ">
             </div>
@@ -129,8 +125,8 @@
         <div class="row cardsDiv">
             <div class="col-md-4">
                 <div class="card" style="width: 24rem;">
-                    <img class="card-img-top" src="../Images/operaHouse.jpg" alt="Card image cap"
-                        style="border-radius: 10px;">
+                   <a href="https://www.sydney.com/"> <img class="card-img-top" src="../Images/operaHouse.jpg" alt="Card image cap"
+                        style="border-radius: 10px;"></a>
                     <div class="card-body">
                         <h4 class="card-title"><b>Capitol</b></h4>
                         <p class="card-text">Sydney — a coastal metropolis whose five million residents make it the
@@ -144,8 +140,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card" style="width: 24rem;">
-                    <img class="card-img-top" src="../Images/population.jpg" alt="Card image cap"
-                        style="border-radius: 10px;">
+                   <a href="https://www.abs.gov.au/population"> <img class="card-img-top" src="../Images/population.jpg" alt="Card image cap"
+                        style="border-radius: 10px;"></a>
                     <div class="card-body">
                         <h4 class="card-title"><b>Population</b></h4>
                         <p class="card-text ">In March 2019, the population of New South Wales was over 8 million,
@@ -159,8 +155,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card" style="width: 24rem;">
-                    <img class="card-img-top" src="../Images/threeSisters.jpg" alt="Card image cap"
-                        style="border-radius: 10px;">
+                    <a href="https://www.nsw.gov.au/about-nsw"><img class="card-img-top" src="../Images/threeSisters.jpg" alt="Card image cap"
+                        style="border-radius: 10px;"></a>
                     <div class="card-body">
                         <h4 class="card-title"><b>NSW</b></h4>
                         <p class="card-text">By establishing your business in regional NSW you can leverage an
