--- a/HTML/Regions.html
+++ b/HTML/Regions.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--  CSS Link -->
     <link type="text/css" rel="stylesheet" href="../CSS/Style.css">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -24,7 +24,7 @@
 <body>
     <div class="container" style="margin-top: 10px;">
         <header>
-            
+
             <div class="topnav" id="myTopnav" style="background-color: chocolate; border-radius: 10px;">
                 <a href="index.html" class="active"><img src="../Images/sunset-1018464__480.webp" width="50" height="30"
                         class="d-inline-block align-top logimg" alt=""></a>
@@ -57,7 +57,8 @@
 
 
         <div class="" style="margin-top: 20px;">
-            <div class="leftaside"  style=" width:15%; height: 600px; background-image: url(../Images/awards.jpg); float: left;  ">
+            <div class="leftaside" style=" width:15%; height: 100%; float: left;">
+                <img src="../Images/ClimateTypesNSW.png">
             </div>
             <h2 class="text-center">Regions</h2>
 
@@ -77,19 +78,25 @@
         }
     </script>
 </body>
-<hr/>
+<hr />
 <div class="container">
- 
+
     <div class="row">
-        <div class="col-md-4"><h3 >NSW Government</h3></div>
-        
-        <div class="col-md-4"><h3 >NSW Departments</h3></div>
-       <div class="col-md-4"> <h3 >Popular</h3></div>
+        <div class="col-md-4">
+            <h3>NSW Government</h3>
+        </div>
+
+        <div class="col-md-4">
+            <h3>NSW Departments</h3>
+        </div>
+        <div class="col-md-4">
+            <h3>Popular</h3>
+        </div>
 
     </div>
 
 
- 
+
 </div>
 
 
