--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,18 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--  CSS Link -->
     <link type="text/css" rel="stylesheet" href="../CSS/Style.css">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- 
-    <link rel="stylesheet" href="jquery.rtResponsiveTables.min.css">
-    <script src="jquery.rtResponsiveTables.min.js" type="text/javascript"></script>
-    -->
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+ 
+    
     <!-- Load an icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="../JS/Scripts"></script>
@@ -27,15 +22,15 @@
 </head>
 
 <body>
-    <div class="container  " style="margin-top: 10px;">
+    <div class="container">
         <header>
     
             <div class="topnav" id="myTopnav" style="background-color: chocolate; border-radius: 10px;">
-                <a href="index.html" class="active"><img src="../Images/sunset-1018464__480.webp" width="50" height="30"
+                <a href="index.html" class="active"><img src="../Images/nsw.jpg" width="70" height="35"
                         class="d-inline-block align-top logimg" alt=""></a>
 
-                <a class="navbar-brand   " href="index.html" style="margin-right: 40px;">My NSW</a>
-
+                <a class="navbar-brand   " href="index.html" style="margin-right: 20px;">My NSW</a>
+                <a href="index.html">Home</a>
                 <a href="Regions.html">Regions</a>
                 <a href="Economy.html">Economy</a>
                 <a href="Culture.html">Culture</a>
@@ -44,44 +39,39 @@
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                     <i class="fa fa-bars"></i>
                 </a>
-                <form class="navbar-form navbar-right" action="/action_page.php" style="margin-right: 10px; ">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search" style="border-radius: 20px;">
-                    </div>
-                    <button type="submit" class="btn btn-default" style="border-radius: 20px;">Submit</button>
-                </form>
+                <form class="form-inline  my-2 my-lg-0" style="padding-top: 13px;">
+                    <input class="form-control mr-sm-2" style="border-radius: 20px;" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-info bg-warning my-2 my-sm-0 " style="border-radius: 20px;" type="submit">Search</button>
+                  </form>
             </div>
-
-
-
         </header>
  
         <div class="parallax" style="margin-top: 10px; border-radius: 10px;"></div>
 
-        <div class="ml-4 " style="margin-top: 20px; height:1000px; font-size:18px">
-            <div class="leftaside mr-4"
-                style=" width:15%; height: 600px; background-image: url(../Images/awards.jpg); float: left;  ">
+        <div class=" " style="margin-top: 20px;">
+            <div class="leftaside "
+                style=" width:15%; height: 750px; background-image: url(../Images/awards.jpg); float: left;  ">
             </div>
             <div id="info" class="">
-                <h1>Key facts about NSW</h1>
-                <h4> Nearly a third of all Australians live in New South Wales (NSW), with
+                <h2>Key facts about NSW</h2>
+                <p> Nearly a third of all Australians live in New South Wales (NSW), with
                     most
-                    living in the state capital of Sydney.<br /> NSW is Australia’s largest state economy.</h4>
-                <h1>Capital</h1>
-                <h4>Sydney is the capital of New South Wales (NSW). The city of Sydney is located on the eastern coast
+                    living in the state capital of Sydney.<br /> NSW is Australia’s largest state economy.</p>
+                <h2>Capital</h2>
+                <p>Sydney is the capital of New South Wales (NSW). The city of Sydney is located on the eastern coast
                     of
-                    NSW</h4>
-                <h1>Population</h1>
-                <h4>NSW has the highest population of any state in Australia, with 8 million residents as of March
+                    NSW</p>
+                <h2>Population</h2>
+                <p>NSW has the highest population of any state in Australia, with 8 million residents as of March
                     2019.
-                </h4><br />
-                <h4>Roughly 64.5% of the state's population live in Greater Sydney.</h4><br />
-                <h4>NSW has the fastest growing population in Australia growing by roughly 106,100 people annually.
+                </p>
+                <p>Roughly 64.5% of the state's population live in Greater Sydney.</p>
+                <p>NSW has the fastest growing population in Australia growing by roughly 106,100 people annually.
                     Greater
                     Sydney <br /> and Newcastle have the highest population densities in the state, with 391 and 423
                     people per
-                    square kilometre.</h4><br />
-                <h4>Top five languages spoken at home in NSW</h4><br />
+                    square kilometre.</p>
+                <p>Top five languages spoken at home in NSW</p><br />
                 <table>
                     <thead>
                         <tr>
@@ -120,11 +110,11 @@
                 </table>
             </div>
         </div>
-        <div class="parallax" style="margin-top: 10px; border-radius: 10px;"></div>
+        <div class="parallax mt-4" style="margin-top: 10px; border-radius: 10px;"></div>
 
-        <div class="row cardsDiv">
+        <div class="row cardsDiv ">
             <div class="col-md-4">
-                <div class="card" style="width: 24rem;">
+                <div class="card" style="width: 22rem; border-radius: 10px; ">
                    <a href="https://www.sydney.com/"> <img class="card-img-top" src="../Images/operaHouse.jpg" alt="Card image cap"
                         style="border-radius: 10px;"></a>
                     <div class="card-body">
@@ -139,7 +129,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card" style="width: 24rem;">
+                <div class="card" style="width: 22rem; border-radius: 10px;">
                    <a href="https://www.abs.gov.au/population"> <img class="card-img-top" src="../Images/population.jpg" alt="Card image cap"
                         style="border-radius: 10px;"></a>
                     <div class="card-body">
@@ -154,7 +144,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card" style="width: 24rem;">
+                <div class="card" style="width: 22rem; border-radius: 10px;">
                     <a href="https://www.nsw.gov.au/about-nsw"><img class="card-img-top" src="../Images/threeSisters.jpg" alt="Card image cap"
                         style="border-radius: 10px;"></a>
                     <div class="card-body">
@@ -163,7 +153,7 @@
                             economically and environmentally diverse area than can easily connect to elsewhere in
                             Australia and the Asia Pacific.</p>
                         <a href="https://www.nsw.gov.au/about-nsw" class="btn btn-primary "
-                            style="margin-top: 60px; border-radius: 20px; width:50%">Go NSW</a>
+                            style="margin-top: 70px; border-radius: 20px; width:50%">Go NSW</a>
                     </div>
                 </div>
             </div>
