--- a/HTML/index.html
+++ b/HTML/index.html
@@ -206,9 +206,9 @@
         <p>Copyright © 2020</p>
     </div>
     <div style="float:right;">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-instagram"></a>
+        <a href="https://www.facebook.com/ServiceNSW/" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/ServiceNSW" class="fa fa-twitter"></a>
+        <a href="https://www.linkedin.com/company/servicensw/?originalSubdomain=au" class="fa fa-linkedin"></a>
     </div>
 
 </footer>
